Update copyright headers.

--- a/opertype/opertype.example.conf
+++ b/opertype/opertype.example.conf
@@ -1,4 +1,4 @@
-// OperServ OperType (C) 2016 Peter "SaberUK" Powell
+// SaberUK's Anope Modules (C) 2016-2017 Peter "SaberUK" Powell
 
 module {
 	name = "os_opertype"
