Put the opening braces in the config files on a new line.
This allows the blocks to be commented out easier.

--- a/opertype/opertype.example.conf
+++ b/opertype/opertype.example.conf
@@ -1,10 +1,12 @@
 // SaberUK's Anope Modules (C) 2016-2017 Peter "SaberUK" Powell
 
-module {
+module
+{
 	name = "os_opertype"
 }
 
-command {
+command
+{
 	service = "OperServ"
 	name = "OPERTYPE"
 	command = "operserv/opertype"
